k8s/manifests/A1_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nighogg-datatype-cs3244/otot-a1-nodeserver:latest
          imagePullPolicy: Never #Avoid hang on impossible image pull
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: 40m
              memory: 100Mi
